UAR-863 fix the missing padding on some panels

--- a/src/main/webapp/css/uar_kuali_application.css
+++ b/src/main/webapp/css/uar_kuali_application.css
@@ -179,6 +179,7 @@ table.tab td.tabtable1-left-colspan img
 #workarea td.tabtable1-left-colspan,
 #workarea td.tabtable1-mid1 {
     background-image: none;
+    padding-left: 20px;
 }
 #workarea table.tab td.tabtable1-mid,
 #workarea table.tab td.tabtable2-mid {
